[fix] : 수정된 파이프라인으로 팀 서버 배포

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,11 @@
+# ============================================
+# Vue Container Internal Nginx Configuration
+# ============================================
+# This nginx serves ONLY Vue static files
+# NOT a reverse proxy for backend services
+
 server {
-    # Listen on port 7001 (internal container port)
+    # Listen on port 7001 (Vue container internal port)
     listen 7001;
     server_name localhost;
 
@@ -11,47 +17,73 @@ server {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript 
-               application/x-javascript application/xml+rss 
-               application/javascript application/json 
-               image/svg+xml;
+    gzip_comp_level 6;
+    gzip_types 
+        text/plain 
+        text/css 
+        text/xml 
+        text/javascript 
+        application/x-javascript 
+        application/xml+rss 
+        application/javascript 
+        application/json 
+        application/xml
+        image/svg+xml;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 "Vue container healthy\n";
+        add_header Content-Type text/plain;
+    }
+
+    # Cache static assets with long expiration
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header Vary Accept-Encoding;
+        try_files $uri =404;
+    }
+
+    # Don't cache index.html and manifest files
+    location ~* \.(html|json|xml)$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+        try_files $uri $uri/ /index.html;
+    }
 
     # SPA routing - try files, fallback to index.html
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        try_files $uri =404;
-    }
-
-    # Don't cache index.html
-    location = /index.html {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-    }
-
-    # Health check endpoint
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
-
-    # Disable access to hidden files
+    # Disable access to hidden files and sensitive files
     location ~ /\. {
         deny all;
         access_log off;
         log_not_found off;
+    }
+
+    # Disable access to config files
+    location ~* \.(env|config|ini|conf)$ {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Error pages
+    error_page 404 /index.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
 
