--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,35 @@
 version: '3.8'
 
 # ============================================
-# Vue Frontend - Docker Compose
-# 로컬 개발 및 테스트용 설정
+# Vue Frontend - Production Docker Compose
 # ============================================
 
 services:
   # ==========================================
-  # Vue.js Frontend Service
+  # Vue.js Frontend Service (Production Build + NGINX)
   # ==========================================
-  vue-frontend:
-    container_name: healthyreal-vue-container
+  vue-dev:
+    container_name: healthyreal-vue-dev
+    image: zzmnxn/healthyreal-vue:latest
     build:
       context: .
       dockerfile: Dockerfile
-    image: healthyreal-vue:latest
     ports:
-      - "7001:7001"
+      - "7001:7001"  # NGINX serving Vue static files
     networks:
       - healthyreal-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://15.164.146.96:7001/"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:7001/health"]
       interval: 30s
       timeout: 3s
       start_period: 40s
       retries: 3
     labels:
       - "service=vue-frontend"
-      - "environment=development"
+      
+    # Vue는 독립적으로 실행 가능
+    # 백엔드 서비스들은 별도로 관리됨
 
 # ==========================================
 # Networks
@@ -37,12 +38,24 @@ networks:
   healthyreal-network:
     driver: bridge
     name: healthyreal-network
+    # 네트워크가 없으면 자동 생성
+    # external: true  # 다른 docker-compose와 함께 사용 시 주석 해제
 
 # ==========================================
-# 사용법
+# Vue 프로덕션 서버 사용 가이드
 # ==========================================
-# 빌드 및 실행: docker-compose up -d
-# 로그 확인: docker-compose logs -f
-# 중지: docker-compose down
-# 재빌드: docker-compose up -d --build
+# Vue 서비스 시작: docker-compose up -d
+# Vue 서비스 중지: docker-compose down
+# Vue 로그 확인: docker-compose logs -f vue-dev
+# Vue 이미지 빌드: docker-compose build
+# Vue 이미지 업데이트: docker-compose pull && docker-compose up -d
+# 
+# 프로덕션 환경:
+# - 포트: 7001
+# - 프로덕션 빌드 (npm run build)
+# - NGINX가 정적 파일 서빙
+# 
+# 네트워크:
+# - healthyreal-network (자동 생성 또는 기존 네트워크 사용)
+# - 다른 서비스와 통합 시 external: true로 설정
 
