--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,5 +19,5 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 # 제외할 파일/디렉토리 (보안 관련 파일 포함)
 sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.min.js,**/*.bundle.js,**/coverage/**,**/.git/**,**/.idea/**,**/public/**,**/static/**,**/assets/images/**,**/assets/video/**,**/service-account.json,**/.env,**/.env.*,**/*.env,**/*key*,**/*secret*,**/*credential*,**/*.pem,**/*.key,**/*.cert,**/*.crt,**/*.p12,**/*.pfx,**/config.properties,**/*credentials*.json
 
-# 테스트 제외
-sonar.test.exclusions=**/test/**,**/tests/**,**/__tests__/**
+# 테스트 제외 (현재는 테스트가 없음.)
+# sonar.test.exclusions=**/test/**,**/tests/**,**/__tests__/**
