--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,42 @@
 server {
     listen 80;
+    server_name _;
+
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
 
     root /usr/share/nginx/html;
     index index.html;
 
+    # 프론트엔드 라우팅
     location / {
         try_files $uri /index.html;
     }
 
+    # 헬스 체크 엔드포인트
+    location = /healthz {
+        add_header Content-Type text/plain;
+        return 200 'ok';
+    }
+
+    # Prometheus exporter용 stub_status
+    location = /status {
+        stub_status;
+        allow all;
+    }
+
     # 백엔드 API 프록시
     location /api/ {
-        proxy_pass http://back:7002/;         # 내부 Docker 네트워크
+        proxy_pass ${SPRING_API_BASE_URL};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-
+    location /pyapi/ {
+        proxy_pass ${FLASK_API_BASE_URL};
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
