feat : k3s release files

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,18 +25,18 @@ server {
         allow all;
     }
 
-    # 백엔드 API 프록시
-    location /api/ {
-        proxy_pass ${SPRING_API_BASE_URL};
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # # 백엔드 API 프록시
+    # location /api/ {
+    #     proxy_pass ${SPRING_API_BASE_URL};
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # }
 
-    location /pyapi/ {
-        proxy_pass ${FLASK_API_BASE_URL};
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # location /pyapi/ {
+    #     proxy_pass ${FLASK_API_BASE_URL};
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # }
 }
