[fix] 일부 파일만 분석하여 분석 시간 단축

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,8 +7,19 @@ sonar.sources=src
 # 소스 코드 인코딩
 sonar.sourceEncoding=UTF-8
 
-#분석에서 제외할 경로들
-# node_modules 전체, 빌드 결과물, 테스트 파일 등을 제외합니다.
-sonar.exclusions=**/node_modules/**,dist/**,**/*.spec.js,**/*.test.js,**/*.spec.ts,**/*.test.ts,**/coverage/**,**/.git/**,**/k8s/**,**/Dockerfile,**/docker-compose.yml,**/Jenkinsfile*,**/nginx.conf
+# 분석에서 제외할 경로들
+# node_modules 전체, 빌드 결과물, 테스트 파일, 이미지, 비디오 등을 제외합니다.
+sonar.exclusions=**/node_modules/**,dist/**,**/*.spec.js,**/*.test.js,**/*.spec.ts,**/*.test.ts,**/coverage/**,**/.git/**,**/k8s/**,**/Dockerfile,**/docker-compose.yml,**/Jenkinsfile*,**/nginx.conf,**/*.png,**/*.jpg,**/*.jpeg,**/*.gif,**/*.svg,**/*.mp4,**/*.webm,**/*.ico,**/*.woff,**/*.woff2,**/*.ttf,**/*.eot,**/@iconify/**,**/@fake-db/**,**/assets/images/**,**/assets/video/**
+
+# JavaScript/TypeScript 분석 최적화
+sonar.javascript.linter.eslint.configFile=.eslintrc.js
+sonar.javascript.linter.eslint.rulesDir=
+
+# 분석 범위 제한 (선택사항 - 너무 많은 파일이 있을 경우)
+sonar.inclusions=src/pages/** 
+#,src/components/**,src/router/**,src/store/**,src/plugins/**
+
+# 메모리 최적화
+sonar.scanner.force-deprecated-java-version=true
 
 
