fix : ngnix 주석 해제

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,18 +25,21 @@ server {
         allow all;
     }
 
-    # # 백엔드 API 프록시
-    # location /api/ {
-    #     proxy_pass ${SPRING_API_BASE_URL};
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    # }
+    # 백엔드 API 프록시 (Spring)
+    location /api/ {
+        proxy_pass ${SPRING_API_BASE_URL}/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-    # location /pyapi/ {
-    #     proxy_pass ${FLASK_API_BASE_URL};
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    # }
+    # 백엔드 API 프록시 (Flask)
+    location /pyapi/ {
+        proxy_pass ${FLASK_API_BASE_URL}/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
