--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -7,9 +7,9 @@ metadata:
   labels:
     app: front
 data:
-  # 백엔드 API 프록시 설정
-  SPRING_API_BASE_URL: "http://13.124.32.119:7002"  # 실제 운영 서버 IP로 변경 필요
-  FLASK_API_BASE_URL: "http://3.34.155.126:5000"    # 실제 운영 서버 IP로 변경 필요
+  # Kubernetes 내부 서비스 이름 사용 (같은 네임스페이스)
+  SPRING_API_BASE_URL: "http://backend-spring-svc:7002"
+  FLASK_API_BASE_URL: "http://backend-flask-svc:5000"  
 ---
 apiVersion: v1
 kind: Service
@@ -27,7 +27,7 @@ spec:
       port: 80
       targetPort: http
     - name: metrics
-      port: 8113  # 9113 → 8113 (nginx-exporter 포트와 일치)
+      port: 8113  
       targetPort: metrics
 ---
 apiVersion: apps/v1
@@ -58,6 +58,12 @@ spec:
           envFrom:
             - configMapRef:
                 name: front-config
+          # nginx envsubst 활성화를 위한 환경 변수 추가
+          env:
+            - name: NGINX_ENVSUBST_TEMPLATE_SUFFIX
+              value: ".template"
+            - name: NGINX_ENVSUBST_OUTPUT_DIR
+              value: "/etc/nginx/conf.d"
           readinessProbe:
             httpGet:
               path: /healthz
